manifests/kube-system/dashboard/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  # type: NodePort
  ports:
  - port: 9090
    # targetPort: 9090
  selector:
    app: kubernetes-dashboard
